--- a/index.html
+++ b/index.html
@@ -1,96 +1,92 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Live Tracking Pengujian</title>
 
-<!-- Font Poppins -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family:'Poppins', sans-serif;
     margin:0;
-    padding:0;
-    background: linear-gradient(135deg,#1e3c72,#2a5298);
+    background:linear-gradient(135deg,#0f5f5c,#1b8a83);
     display:flex;
     justify-content:center;
     align-items:center;
-    min-height:100vh;
+    height:100vh;
 }
 
 .container{
-    background:#ffffff;
-    width:95%;
-    max-width:1100px;
-    padding:30px;
-    border-radius:20px;
-    box-shadow:0 20px 40px rgba(0,0,0,0.2);
+    background:#f5f7f8;
+    padding:40px;
+    border-radius:25px;
+    width:900px;
+    box-shadow:0 15px 40px rgba(0,0,0,0.2);
+    text-align:center;
 }
 
-h1{
-    text-align:center;
-    color:#1e3c72;
+.logo{
+    width:90px;
+    margin-bottom:15px;
+}
+
+h2{
     margin-bottom:25px;
+    font-weight:600;
+    color:#0f5f5c;
 }
 
 .search-box{
     display:flex;
     gap:10px;
-    margin-bottom:25px;
+    justify-content:center;
 }
 
 input{
-    flex:1;
+    width:60%;
     padding:12px;
-    border-radius:10px;
+    border-radius:12px;
     border:1px solid #ccc;
-    font-size:16px;
 }
 
 button{
-    padding:12px 20px;
+    padding:12px 25px;
     border:none;
-    border-radius:10px;
-    background:#1e3c72;
+    border-radius:12px;
+    background:#1b8a83;
     color:white;
-    font-weight:600;
     cursor:pointer;
-    transition:0.3s;
+    font-weight:600;
 }
 
 button:hover{
-    background:#16325c;
+    background:#146e69;
 }
 
 table{
     width:100%;
+    margin-top:30px;
     border-collapse:collapse;
-    margin-top:15px;
-    font-size:14px;
+    background:white;
+    border-radius:15px;
+    overflow:hidden;
 }
 
 th, td{
+    padding:12px;
     border:1px solid #ddd;
-    padding:10px;
-    text-align:left;
 }
 
 th{
-    background:#1e3c72;
+    background:#1b8a83;
     color:white;
 }
 
-tr:nth-child(even){
-    background:#f2f2f2;
-}
-
-.error{
-    text-align:center;
+.notfound{
+    margin-top:20px;
     color:red;
     font-weight:600;
-    margin-top:10px;
 }
 </style>
 </head>
@@ -98,109 +94,47 @@ tr:nth-child(even){
 <body>
 
 <div class="container">
-    <h1>Live Tracking Pengujian</h1>
+    
+    <!-- GANTI NAMA FILE LOGO SESUAI DI REPO -->
+    <img src="logofix_bpmkp.png" class="logo">
+
+    <h2>LIVE TRACKING PENGUJIAN</h2>
 
     <div class="search-box">
-        <input type="text" id="searchInput" placeholder="Masukkan Nomor Permintaan">
+        <input type="text" id="searchInput" placeholder="Masukkan Nomor Permohonan">
         <button onclick="searchData()">Cari</button>
     </div>
 
     <div id="result"></div>
+
 </div>
 
 <script>
+
 const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHurVp3MKLNA0mvWeNfN4IH8O05dCo-kc52FtiT7f_n0cpZum9mQ1VCLNObhkm0rpkgzwFPJPrRwY_/pub?gid=0&single=true&output=csv";
 
-let sheetData = [];
+async function searchData(){
+    const keyword = document.getElementById("searchInput").value.trim();
+    const response = await fetch(csvUrl);
+    const data = await response.text();
 
-fetch(csvUrl)
-.then(response => response.text())
-.then(data => {
     const rows = data.split("\n").map(row => row.split(","));
-    sheetData = rows;
-});
+    const headers = rows[0];
 
-function searchData(){
-    const input = document.getElementById("searchInput").value.trim();
-    const resultDiv = document.getElementById("result");
-    resultDiv.innerHTML = "";
+    let found = rows.find((row,index)=> index>0 && row.includes(keyword));
 
-    if(input === ""){
-        resultDiv.innerHTML = "<div class='error'>Masukkan nomor permintaan terlebih dahulu</div>";
-        return;
-    }
-
-    let found = false;
-
-    for(let i=1; i<sheetData.length; i++){
-        if(sheetData[i][2] === input){
-
-            found = true;
-
-            resultDiv.innerHTML = `
-            <table>
-                <tr>
-                    <th>Nama Pelanggan</th>
-                    <td>${sheetData[i][0]}</td>
-                </tr>
-                <tr>
-                    <th>Jenis Pelayanan</th>
-                    <td>${sheetData[i][1]}</td>
-                </tr>
-                <tr>
-                    <th>Nomor Permintaan</th>
-                    <td>${sheetData[i][2]}</td>
-                </tr>
-                <tr>
-                    <th>Jenis Pengujian</th>
-                    <td>${sheetData[i][3]}</td>
-                </tr>
-                <tr>
-                    <th>Pembayaran</th>
-                    <td>${sheetData[i][4]}</td>
-                </tr>
-                <tr>
-                    <th>Penyiapan Sampel</th>
-                    <td>${sheetData[i][5]}</td>
-                </tr>
-                <tr>
-                    <th>Pengujian</th>
-                    <td>${sheetData[i][6]}</td>
-                </tr>
-                <tr>
-                    <th>Subkontrak</th>
-                    <td>${sheetData[i][7]}</td>
-                </tr>
-                <tr>
-                    <th>Pembuatan LHP/Sertifikat</th>
-                    <td>${sheetData[i][8]}</td>
-                </tr>
-                <tr>
-                    <th>LHP/Sertifikat Terbit</th>
-                    <td>${sheetData[i][9]}</td>
-                </tr>
-                <tr>
-                    <th>Tgl Terbit</th>
-                    <td>${sheetData[i][10]}</td>
-                </tr>
-                <tr>
-                    <th>Estimasi Selesai</th>
-                    <td>${sheetData[i][11]}</td>
-                </tr>
-                <tr>
-                    <th>Keterangan</th>
-                    <td>${sheetData[i][12]}</td>
-                </tr>
-            </table>
-            `;
-            break;
-        }
-    }
-
-    if(!found){
-        resultDiv.innerHTML = "<div class='error'>Data tidak ditemukan</div>";
+    if(found){
+        let table = "<table><tr>";
+        headers.forEach(h => table += `<th>${h}</th>`);
+        table += "</tr><tr>";
+        found.forEach(col => table += `<td>${col}</td>`);
+        table += "</tr></table>";
+        document.getElementById("result").innerHTML = table;
+    } else {
+        document.getElementById("result").innerHTML = "<div class='notfound'>Data tidak ditemukan</div>";
     }
 }
+
 </script>
 
 </body>
