--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@ th{
 
 <script>
 
+<script>
+
 const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHurVp3MKLNA0mvWeNfN4IH8O05dCo-kc52FtiT7f_n0cpZum9mQ1VCLNObhkm0rpkgzwFPJPrRwY_/pub?gid=0&single=true&output=csv";
 
 async function searchData(){
@@ -121,7 +123,14 @@ async function searchData(){
     const rows = data.split("\n").map(row => row.split(","));
     const headers = rows[0];
 
-    let found = rows.find((row,index)=> index>0 && row.includes(keyword));
+    let found = null;
+
+    for(let i=1; i<rows.length; i++){
+        if(rows[i][2] == keyword){  // kolom ke-3 (Nomor Permohonan)
+            found = rows[i];
+            break;
+        }
+    }
 
     if(found){
         let table = "<table><tr>";
@@ -135,6 +144,7 @@ async function searchData(){
     }
 }
 
+</script>
 </script>
 
 </body>
