--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tracking Permintaan Pengujian</title>
 
-<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -22,15 +21,16 @@ body{
   justify-content:center;
   align-items:center;
   min-height:100vh;
+  padding:20px;
 }
 
 .container{
   background:white;
   padding:40px;
-  border-radius:18px;
-  width:95%;
-  max-width:1000px;
-  box-shadow:0 15px 35px rgba(0,0,0,0.2);
+  border-radius:20px;
+  width:100%;
+  max-width:1300px;
+  box-shadow:0 20px 40px rgba(0,0,0,0.2);
   text-align:center;
 }
 
@@ -46,13 +46,13 @@ h2{
 }
 
 .search-box{
-  margin-bottom:25px;
+  margin-bottom:30px;
 }
 
 input{
-  padding:12px 15px;
-  width:65%;
-  border-radius:30px;
+  padding:14px 20px;
+  width:60%;
+  border-radius:40px;
   border:1px solid #ccc;
   outline:none;
   font-size:14px;
@@ -61,13 +61,13 @@ input{
 
 input:focus{
   border-color:#0b5394;
-  box-shadow:0 0 5px rgba(11,83,148,0.3);
+  box-shadow:0 0 8px rgba(11,83,148,0.3);
 }
 
 button{
-  padding:12px 25px;
+  padding:14px 30px;
   border:none;
-  border-radius:30px;
+  border-radius:40px;
   background:#0b5394;
   color:white;
   font-weight:500;
@@ -81,25 +81,27 @@ button:hover{
   transform:scale(1.05);
 }
 
+.table-wrapper{
+  overflow-x:auto;
+}
+
 table{
   width:100%;
   border-collapse:collapse;
   margin-top:20px;
-  border-radius:12px;
-  overflow:hidden;
+  font-size:13px;
 }
 
 th{
   background:#0b5394;
   color:white;
   padding:12px;
-  font-size:14px;
+  text-align:left;
 }
 
 td{
-  padding:12px;
+  padding:10px;
   border-bottom:1px solid #eee;
-  font-size:13px;
 }
 
 tr:hover{
@@ -132,9 +134,10 @@ tr:hover{
 </div>
 
 <script>
+
 async function searchData(){
 
-const keyword = document.getElementById("searchInput").value.trim();
+const keyword = document.getElementById("searchInput").value.trim().toLowerCase();
 
 if(keyword === ""){
   alert("Masukkan Nomor Permintaan terlebih dahulu");
@@ -143,11 +146,13 @@ if(keyword === ""){
 
 const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHurVp3MKLNA0mvWeNfN4IH8O05dCo-kc52FtiT7f_n0cpZum9mQ1VCLNObhkm0rpkgzwFPJPrRwY_/pub?gid=0&single=true&output=csv";
 
+try{
+
 const response = await fetch(url);
 const data = await response.text();
 
 const rows = data.split(/\r?\n/).map(row =>
-  row.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g)
+  row.match(/(".*?"|[^",]+)(?=\s*,|\s*$)/g)
 );
 
 let found = false;
@@ -157,31 +162,47 @@ for(let i=1;i<rows.length;i++){
 
   if(!rows[i]) continue;
 
-  const nomorPermintaan = rows[i][2]?.replace(/"/g,"").trim();
+  const nomorPermintaan = rows[i][2]?.replace(/"/g,"").trim().toLowerCase();
 
   if(nomorPermintaan === keyword){
 
     found = true;
 
     html = `
+    <div class="table-wrapper">
     <table>
       <tr>
         <th>NAMA PELANGGAN</th>
-        <th>JENIS PELAYANAN</th>
         <th>NOMOR PERMINTAAN</th>
+        <th>JUMLAH SAMPEL</th>
         <th>JENIS PENGUJIAN</th>
+        <th>TGL BAYAR</th>
+        <th>PENYIAPAN SAMPEL</th>
+        <th>PENGUJIAN</th>
+        <th>SUBKONTRAK</th>
+        <th>PEMBUATAN LHP</th>
+        <th>LHP TERBIT</th>
+        <th>TGL TERBIT</th>
         <th>ESTIMASI SELESAI</th>
         <th>KETERANGAN</th>
       </tr>
       <tr>
-        <td>${rows[i][0]?.replace(/"/g,"")}</td>
-        <td>${rows[i][1]?.replace(/"/g,"")}</td>
-        <td>${rows[i][2]?.replace(/"/g,"")}</td>
-        <td>${rows[i][3]?.replace(/"/g,"")}</td>
-        <td>${rows[i][11]?.replace(/"/g,"")}</td>
-        <td>${rows[i][12]?.replace(/"/g,"")}</td>
+        <td>${rows[i][1]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][2]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][3]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][4]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][8]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][9]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][10]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][11]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][12]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][13]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][14]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][15]?.replace(/"/g,"") || "-"}</td>
+        <td>${rows[i][18]?.replace(/"/g,"") || "-"}</td>
       </tr>
     </table>
+    </div>
     `;
     break;
   }
@@ -193,7 +214,13 @@ if(!found){
 
 document.getElementById("result").innerHTML = html;
 
+}catch(error){
+  document.getElementById("result").innerHTML =
+  "<div class='notfound'>Gagal mengambil data. Pastikan CSV sudah dipublish.</div>";
 }
+
+}
+
 </script>
 
 </body>
